src/objects/Charket__WeChatAccount__c.object
<CustomObject>
    <fields>
        <fullName>Charket__AppId__c</fullName>
        <label>App ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__QRCodeImageId__c</fullName>
        <label>QR Code Image ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__QRCode__c</fullName>
        <formula>IF(NOT(ISBLANK(Charket__QRCodeImageId__c)), IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos; + Charket__QRCodeImageId__c , &apos;No Attachment&apos;, 100, 100), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__SalesforceEndpoint__c</fullName>
        <label>Salesforce Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Charket__Type__c</fullName>
        <inlineHelpText>Subscribe: 订阅号
Service: 服务号
Provide businesses and Organization a more robust business services and user management capabilities. Mean to help companies quickly implement the new number of public service platform.
Subscription
Provide a new way of in</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription Account</fullName>
                </value>
                <value>
                    <fullName>Service Account</fullName>
                    <default>true</default>
                    <label>Service Account</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__WeChatId__c</fullName>
        <externalId>true</externalId>
        <label>WeChat ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Charket__WeChatOriginId__c</fullName>
        <externalId>true</externalId>
        <label>WeChat Origin ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>WeChat Account</label>
    <listViews>
        <fullName>Charket__All</fullName>
        <columns>NAME</columns>
        <columns>Charket__Type__c</columns>
        <columns>Charket__WeChatId__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat  Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>